--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -47,7 +47,7 @@
 		"aboutBadges": "Badges",
 		"hours": "Hours",
 		"minutes": "Minutes",
-		"characters": "Characters",
+		"characters": "characters",
 		"fileformats": "File Formats",
 		"show": "Show",
 		"hide": "Hide",
@@ -196,6 +196,7 @@
 		"noBadges": "No badges",
 		"recipient": "Recipient",
 		"recipients": "Recipients",
+		"recipientsViaThisInstitution": "Recipients <span class='tw-italic tw-font-normal'>(via this institution)</span>",
 		"noRecipient": "No recipient",
 		"createInstitution": "Create institution",
 		"createInstitutionNow": "Create institution now",
@@ -418,8 +419,8 @@
 		"confirmInvitation": "Confirm invitation",
 		"networksHeadline": "All networks at a glance",
 		"noNetworks": "no networks",
-		"networkRegistered": "Network is registered on OEB",
-		"networksRegistered": "Networks are registered on OEB",
+		"networkRegistered": "network is registered on OEB",
+		"networksRegistered": "networks are registered on OEB",
 		"partners": "Network members",
 		"noInstitutionAddedYet": "You have not yet added any institutions to your network.",
 		"partnerIssuers": "Partners",
