fix: show things conditionally, translations

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -406,6 +406,7 @@
 		"addPartnerNext": "Deine Partner-Institutionen kannst du im nächsten Schritt hinzufügen.",
 		"welcomeDashboard": "Willkommen auf dem Dashboard des Netzwerks",
 		"inviteInstitutions": "Institutionen zum Netzwerk einladen",
+		"shortInviteInstitutions": "Institutionen einladen",
 		"addInstitutions": "Institutionen hinzufügen",
 		"rolesAndRights": "<span class='tw-text-link tw-underline'>Rollen und Rechte</span> übertragen sich: Die Einladungs-Mail geht an die Eigentümer:innen der Institutionen. <span class='tw-font-bold'>Diese werden innerhalb des Netzwerks entsprechende Rechte haben wie z.B. das Erstellen von Netzwerk-Badges und das Hinzufügen weiterer Partner-Organisationen</span>.",
 		"addMember_owner": "Eigentümer:in",
