--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -662,7 +662,7 @@
 		"howLearningWorks": "Beschreibe auch, <u>wie</u> das Lernen stattfindet.",
 		"inAddition": "Oft können neben fachlichen Kompetenzen auch <u>Soft Skills</u> wie soziale, kommunikative oder Problemlösungs-Fähigkeiten erworben werden – bei Teamarbeit, Experimentieren, Planung, ...",
 		"aiAssistantNote": "Hinweis: KI-Unterstützung – der Badge-Assistent kann Fehler machen. Überprüfe daher die Vorschläge und melde dich bei fehlerhaften Ergebnissen gerne per <a class='tw-text-[var(--color-link)] tw-underline' href='mailto:support@openbadges.education'>E-Mail</a>. <a class='tw-text-[var(--color-link)] tw-underline' href='https://openbadges.education/public/privacy' target='_blank'>Datenschutz bei OEB.</a>",
-		"activityEndDateRequired": "Enddatum ist erforderlich und muss nach dem Startdatum liegen",
+		"activityEndDateRequired": "Enddatum ist erforderlich und darf nicht vor dem Startdatum liegen",
 		"activityStartDateRequired": "Startdatum ist erforderlich"
 	},
 	"Signup": {
@@ -1075,7 +1075,7 @@
 		"badgeDetailPage": "Badge Detail Seite",
 		"badgesAwardedSuccessfully": "Badges erfolgreich vergeben",
 		"invalidExpirationDateRange": "Das Ablaufdatum muss nach dem Start-Datum liegen",
-		"invalidDateRange": "Das End-Datum muss nach dem Start-Datum liegen",
+		"invalidDateRange": "Das End-Datum darf nicht vor dem Start-Datum liegen",
 		"invalidDate": "Bitte gib ein Datum in der Form YYYY/mm/dd an",
 		"missingStartDate": "Bitte gib ein Start-Datum für die Gültigkeit an",
 		"expired": "QR-Code ist nicht mehr gültig."
