--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -83,6 +83,7 @@
 		"place": "stellen",
 		"forwarded": "weitergeleitet",
 		"revoke": "zurücknehmen",
+		"withdraw": "Zurückziehen",
 		"confirm": "Bestätigen",
 		"noRequests": "Keine Anfragen",
 		"oneRequest": "1 Anfrage",
@@ -461,7 +462,8 @@
 		"sharedBy": "Freigegeben von",
 		"sharedOn": "Freigegeben am",
 		"website": "Netzwerk-Webseite",
-		"createLpInfo": "Um einen <span class='tw-font-bold'>Netzwerk-Lernpfad</span> anlegen zu können, müssen mindestens zwei Badges im Netzwerk erstellt oder von Partner-Institutionen für das Netzwerk freigegeben werden."
+		"createLpInfo": "Um einen <span class='tw-font-bold'>Netzwerk-Lernpfad</span> anlegen zu können, müssen mindestens zwei Badges im Netzwerk erstellt oder von Partner-Institutionen für das Netzwerk freigegeben werden.",
+		"pendingInvites": "Unbestätigte Einladungen"
 	},
 	"Badge": {
 		"groupBy": "Gruppieren nach",
