--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -83,6 +83,7 @@
 		"place": "place",
 		"forwarded": "forwarded",
 		"revoke": "revoke",
+		"withdraw": "Withdraw",
 		"confirm": "Confirm",
 		"noRequests": "No requests",
 		"oneRequest": "1 request",
@@ -462,7 +463,8 @@
 		"sharedBy": "Shared by",
 		"sharedOn": "Shared on",
 		"website": "Network website",
-		"createLpInfo": "To create a <span class='tw-font-bold'>network learning path</span>, at least two badges must be created in the network or approved for the network by partner institutions."
+		"createLpInfo": "To create a <span class='tw-font-bold'>network learning path</span>, at least two badges must be created in the network or approved for the network by partner institutions.",
+		"pendingInvites": "Unconfirmed invitations"
 	},
 	"Badge": {
 		"groupBy": "Group by",
