--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -435,6 +435,7 @@
 		"networksRegistered": "networks are registered on OEB",
 		"partners": "Network members",
 		"noInstitutionAddedYet": "You have not yet added any institutions to your network.",
+		"addInstitutionToIssue": "The network itself does not award badges. Add institutions to your network to award badges.",
 		"partnerIssuers": "Partners",
 		"notifiedIssuerOwners": "We have notified the owners of the institutions by email.",
 		"visibleAfterConfirmation": "Once they have confirmed the invitation, they will be visible on the partner page.",
