--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -358,7 +358,7 @@
 		"websiteUrl": "Webseiten-URL",
 		"schoolLabel": "Schule (Grundschulen, weiterführende Schulen, Berufsschulen, Institutionen formaler schulischer Bildung)",
 		"universityLabel": "Hochschule (Universitäten. Fachhochschulen, ...)",
-		"othersLabel": "Andere (Bibliotheken, Museen, FabLabs, Unternehmen, Vereine, ...)",
+		"othersLabel": "Anderer Bildungsanbieter (Bibliotheken, Makerspaces, Museen, Vereine, Unternehmen, ...)",
 		"imageRequiredError": "Bitte wähle ein Bild aus.",
 		"csvPreview": "Hier siehst du eine Vorschau der ersten",
 		"rowsOfYourFile": "Zeilen deiner Datei.",
