feat: add youth welfare organization as issuer category

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -403,7 +403,8 @@
 		"evidence": "Nachweis für erfolgreiche Teilnahme",
 		"addNewEvidence": "Weiteren Nachweis hinzufügen",
 		"evidenceUrl": "URL zum Nachweis",
-		"evidenceNarrative": "Textliches Narrativ"
+		"evidenceNarrative": "Textliches Narrativ",
+		"youthWelfare": "Freier Träger der Jugendhilfe"
 	},
 	"Network": {
 		"networksNav": "Netzwerke A-Z",
