--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -34,6 +34,7 @@
 		"address": "Adresse",
 		"street": "Strasse",
 		"postalCode": "Postleitzahl",
+		"optionalPostalCode": "<span class=\"tw-italic tw-font-normal\">Optional: </span> Postleitzahl",
 		"description": "Beschreibung",
 		"city": "Stadt",
 		"member": "Mitglied",
