--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -34,6 +34,7 @@
 		"address": "Address",
 		"street": "Street",
 		"postalCode": "Postal Code",
+		"optionalPostalCode": "<span class=\"tw-italic tw-font-normal\">Optional: </span> Postal Code",
 		"description": "Description",
 		"city": "City",
 		"member": "Member",
