feat: add new category to map of all issuers

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -314,6 +314,7 @@
 			"allCategories": "Alle Kategorien",
 			"schule": "Schule",
 			"hochschule": "Hochschule",
+			"jugendhilfe": "Freier Träger der Jugendhilfe",
 			"andere": "andere"
 		},
 		"learningPathParticipants": "Teilnehmer:innen",
