--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -314,6 +314,7 @@
 			"allCategories": "All categories",
 			"schule": "School",
 			"hochschule": "College",
+			"jugendhilfe": "Youth Welfare Organization",
 			"andere": "Others"
 		},
 		"learningPathParticipants": "Participants",
