--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -559,7 +559,8 @@
 		"allNetworkMembersGetBadge": "All members of the selected network can award the badge via their institution.",
 		"networkAssertionsGetTracked": "All badge awards are included in the network's data evaluation.",
 		"cantRemoveFromNetwork": "The badge CANNOT be removed from the network.",
-		"shareBadgeOnNetwork": "Share badge on network"
+		"shareBadgeOnNetwork": "Share badge on network",
+		"alreadyShared": "The badge was already shared on a network."
 	},
 	"CreateBadge": {
 		"chooseBadgeCategory": "Choose category",
